fix: letter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@
       font-style: italic;
       font-size: 27.65px;
       color: #fafafa;
+      letter-spacing: 0em;
       margin-left: 3px; }
     .main_landing .main_heading .typed-cursor {
       color: #ff0072;
