--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -63,8 +63,9 @@
       font-style: italic;
       font-size: 27.65px;
       color: #fafafa;
-      // letter-spacing: 0.07em;
+      letter-spacing: 0em;
       margin-left: 3px;
+      // word-spacing: 2em;
     }
     .typed-cursor {
       color: #ff0072;
